--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -412,18 +412,31 @@
         <div class="nav-up"><a href="#domrect">&#9650;</a></div>
         <div class="nav-down"><a href="#audio">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td colspan="4">css font fallback</td><td colspan="5" class="mono" id="fontFB"></td></tr>
-    <tr><td colspan="4">js</td><td colspan="5" class="mono"></td></tr>
-    <tr><td colspan="4">the other js</td><td colspan="5" class="mono"></td></tr>
-    <tr><td colspan="4">unicode glyphs</td><td colspan="5" class="mono"></td></tr>
+    <tr><td colspan="9" class="intro"><span class="no_color">The real world might strike a balance between efficiency vs
+      entropy [ <a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64
+      fonts by default], but these tests are designed to be comprehensive, not small and fast. As such, the tests are, hopefully,
+      disabled for <code>Android</code> as they are not suitable [e.g. limted fonts to detect, <code>slow script</code> prompts].</span>
+    </td></tr>
+    <tr><td colspan="4">enumerate fonts <sup>1</sup></td><td colspan="5" class="mono" id="fontFB"></td></tr>
+    <tr><td colspan="4">js <sup>2</sup></td><td colspan="5" class="mono"></td></tr>
+    <tr><td colspan="4">the other js <sup>3</sup></td><td colspan="5" class="mono"></td></tr>
+    <tr><td colspan="4">unicode glyphs <sup>3</sup></td><td colspan="5" class="mono"></td></tr>
+    <tr><td colspan="4">canvas</td><td colspan="5" class="mono"></td></tr>
     <tr><td colspan="9" class="showhide">
         <input id="collapseF" class="toggle" type="checkbox" checked onchange="toggleitems(this, `F`)">
         <label for="collapseF" class="lbl-toggle" id="labelF">&#9660; show details</label>
     </td></tr>
-    <tr class="togF"><td></td><td colspan="8" class="sub10">css font fallback &nbsp
+    <tr class="togF"><td></td><td colspan="8" class="sub10">enumerate fonts &nbsp
        <button class="button10" onClick="copyclip(`fontFBFound`)">copy to clipboard</button></td></tr>
     <tr class="togF"><td></td><td colspan="8" class="intro" id="fontFBFound"></td></tr>
     <tr class="togF"><td colspan="9"></td></tr>
+    <tr><td colspan="9"><span class="no_color">code based on work by </span>
+      <sup>1</sup><a target="_blank" class="blue" href="https://github.com/arthuredelstein/tordemos">Arthur Edelstein</a>
+      <span class="no_color">,</span>
+      <sup>2</sup> <a target="_blank" class="blue" href="https://github.com/Valve/fingerprintjs2">fingerprintjs2</a>
+      <span class="no_color"> and </span>
+      <sup>3</sup> <a target="_blank" class="blue" href="https://browserleaks.com/fonts">browserleaks</a>
+    </td></tr>
   </table>
 
   <!-- TABLE 11: Audio - audio.js -->
