--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -39,6 +39,18 @@
       document.execCommand("copy");
     }
   };
+  function goFS() {
+    if (document.mozFullScreenEnabled) {
+     var elFS = document.getElementById("elFS");
+       elFS.mozRequestFullScreen();
+    }
+  };
+  document.addEventListener("mozfullscreenchange", function(evnt) {
+    if ( document.mozFullScreen ) {
+      dom.fsLeak = screen.width+" x "+screen.height;
+      document.mozCancelFullScreen();
+    }
+  });
   </script>
 </head>
 
@@ -55,6 +67,7 @@
   <!-- iframes: get them in early-->
   <iframe id="iframeDR" style='position: absolute; top: -2000%;'></iframe>
   <iframe id="iframeFF" style='position: absolute; top: -1000%;'></iframe>
+  <img class="hidden" width=0 height=0 id="elFS"></img>
 
   <!-- TABLE 1: Screen - screen.js -->
   <table id="tb1">
@@ -73,7 +86,7 @@
     <tr><td>viewport <sup>3</sup></td><td id="Viewport"></td></tr>
     <tr><td>full screen</td><td id="fsState"></td></tr>
     <tr><td>[api] full screen</td><td id="fsSupport"></td></tr>
-    <tr><td><span class="no_color">[click here]</span> [leak] full screen <sup>3</sup></td><td id="fsLeak"></td></tr>
+    <tr><td><button class="button1" onClick="goFS()">click here</button> &nbsp [leak] full screen <sup>3</sup></td><td id="fsLeak"></td></tr>
     <tr><td>private window</td><td id="IsPBMode"></td></tr>
     <tr><td>orientation</td><td id="ScrOrient"></td></tr>
     <tr><td>[matchMedia] window orientation</td><td id="mmOrient"></td></tr>
