--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -7,39 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <script src="js/generic.js"></script>
   <script src="js/globals.js"></script>
-  <script src="js/fonts.js"></script>
   <script>
-  function showhide(toggleType, toggleID, togWord) {
-    var xyz = document.getElementsByClassName("tog"+toggleID); var abc;
-    for (abc = 0; abc < xyz.length; abc++) { xyz[abc].style.display = toggleType;}
-    document.getElementById("label"+toggleID).innerHTML = togWord+" details";
-    // if domrect hashes are NOT the same, unhide extra sections & change drFirstHeader text  
-    if (toggleID == "D") {
-      var drArray = [dom.dr1.innerHTML, dom.dr2.innerHTML, dom.dr3.innerHTML, dom.dr4.innerHTML];
-      if (drArray.every( (val, i, arr) => val === arr[0] ) ) {} else {
-        dom.drFirstHeader.innerHTML = "Element.getClientRects";
-        var xyz = document.getElementsByClassName("togD1"); var abc;
-        for (abc = 0; abc < xyz.length; abc++) { xyz[abc].style.display = toggleType;};
-      };
-    };
-  };
-  function toggleitems(chkbxState, chkbxID) {
-    if (chkbxState.checked) {showhide("none", chkbxID, "&#9660; show");}
-    else {showhide("table-row", chkbxID, "&#9650; hide");}
-  };
-  function copyclip(element) {
-    if (document.selection) {
-      var range = document.body.createTextRange();
-      range.moveToElementText(document.getElementById(element));
-      range.select().createTextRange();
-      document.execCommand("copy");
-    } else if (window.getSelection) {
-      var range = document.createRange();
-      range.selectNode(document.getElementById(element));
-      window.getSelection().addRange(range);
-      document.execCommand("copy");
-    }
-  };
   function goFS() {
     if (document.mozFullScreenEnabled) {
      var elFS = document.getElementById("elFS");
@@ -357,6 +325,7 @@
         <div class="nav-up"><a href="#canvas">&#9650;</a></div>
         <div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
     </th></tr></thead>
+    <tr><td colspan="2" class="intro"></span><button class="button9" id="drRerun">re-run tests</button></td></tr>
     <tr><td colspan="3">Element.getClientRects</td><td colspan="4" id="dr1"></td></tr>
     <tr><td colspan="3">Element.getBoundingClientRect</td><td colspan="4" id="dr2"></td></tr>
     <tr><td colspan="3">Range.getClientRects</td><td colspan="4" id="dr3"></td></tr>
@@ -430,7 +399,7 @@
       entropy [ <a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64
       fonts by default], but these tests are designed to be comprehensive, not small and fast. As such, the tests are, hopefully,
       disabled for <code>Android</code> as they are not suitable [e.g. limted fonts to detect, <code>slow script</code> prompts].
-      &nbsp <button class="button10" onClick="runFontTests()">run tests</button> </span>
+      &nbsp <button class="button10" onClick="runFontTests()">run tests</button></span>
     </td></tr>
     <tr><td colspan="4">enumerate fonts <sup>1</sup></td><td colspan="5" class="mono" id="fontFB"></td></tr>
     <tr><td colspan="4">js <sup>2</sup></td><td colspan="5" class="mono"></td></tr>
@@ -592,7 +561,7 @@
   <script src="js/devices.js"></script>
   <script src="js/canvas.js"></script>
   <script src="js/domrect.js"></script>
-  <!--<script src="js/fonts.js"></script>-->
+  <script src="js/fonts.js"></script>
   <script src="js/audio.js"></script>
   <script src="js/media.js"></script>
   <script src="js/misc.js"></script>
