--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -395,10 +395,10 @@
         <div class="nav-up"><a href="#domrect">&#9650;</a></div>
         <div class="nav-down"><a href="#audio">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td colspan="9" class="intro"><span class="no_color">The real world might strike a balance between efficiency vs
+    <tr><td colspan="9" class="intro"><span class="no_color">The real world strikes a balance between efficiency vs
       entropy [ <a target="_blank" class="blue" href="https://valve.github.io/fingerprintjs2/">fingerprintjs2</a> checks 64
-      fonts by default], but these tests are designed to be comprehensive, not small and fast. As such, the tests are, hopefully,
-      disabled for <code>Android</code> as they are not suitable [e.g. limted fonts to detect, <code>slow script</code> prompts].</span>
+      fonts by default], but these tests are designed to be comprehensive, not small and fast. As such, they are not automatically run.
+      May be unsuitable on Android [e.g. limted fonts to detect, slow script prompts].</span>
     </td></tr>
     <tr><td colspan="4"><button class="btn10" id="fontRun" onClick="runFont()">run tests</button>
       &nbsp enumerate fonts <sup>1</sup></td><td colspan="5" class="mono" id="fontFB"></td></tr>
