--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -47,11 +47,15 @@
         <div class="nav-down"><a href="#useragent">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td>screen resolution</td><td id="ScrRes"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">real time update if<br>spoofing inner window:<br>range 500-3000</span></div> [css] screen resolution <sup>1</sup></td><td id="S"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">real time update if<br>spoofing inner window:<br>range 500-3000</span></div>
+      &nbsp [css] screen resolution <sup>1</sup></td><td id="S"></td></tr>
     <tr><td>available resolution</td><td id="ScrAvail"></td></tr>
     <tr><td>outer window</td><td id="WndOut"></td></tr>
     <tr><td>inner window</td><td id="WndIn"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">real time update:<br>range 500-3000</span></div> [css] inner window <sup>1, 2</sup></td><td id="D"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">real time update:<br>range 500-3000</span></div>
+      &nbsp [css] inner window <sup>1, 2</sup></td><td id="D"></td></tr>
     <tr><td>viewport <sup>3</sup></td><td id="Viewport"></td></tr>
     <tr><td>full screen</td><td id="fsState"></td></tr>
     <tr><td>[api] full screen</td><td id="fsSupport"></td></tr>
@@ -66,7 +70,9 @@
     <tr><td>[css] dpi</td><td id="P"></td></tr>
     <tr><td>[matchMedia] dpi</td><td id="mmDPI"></td></tr>
     <tr><td>hidpi</td><td></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">might break<br> with HiDPI</span></div> zoom %</td><td id="jsZoom"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">might break<br> with HiDPI</span></div>
+      &nbsp zoom %</td><td id="jsZoom"></td></tr>
     <tr><td>devicePixelRatio</td><td id="DevPR"></td></tr>
     <tr><td colspan="2"><span class="no_color">code based on work by </span>
       <sup>1</sup><a target="_blank" class="blue" href="https://arthuredelstein.github.io/tordemos/media-query-fingerprint.html">Arthur Edelstein</a>
@@ -107,16 +113,17 @@
     <tr><td colspan="2" class="center">---browser, version, os---</td></tr>
     <tr><td>[css] browser</td><td id="fdResourceCss"></td></tr>
     <tr><td>[error messages] browser</td><td id="fdError"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext"><b>mozPaintCount:</b>
-      <br>we could also use<br>mozGetAsFile<br>mozInnerScreenX<br>mozScreenX<br>oscpu<br>scrollMaxX</span>
-      </div> [feature detection] browser</td><td id="fdPaintCount"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext"><b>mozPaintCount:</b><br>we could also use<br>mozGetAsFile<br>mozInnerScreenX
+      <br>mozScreenX<br>oscpu<br>scrollMaxX</span></div> &nbsp [feature detection] browser</td><td id="fdPaintCount"></td></tr>
     <tr><td>[math] browser</td><td id="fdMath"></td></tr>
     <tr><td>[resource://] browser</td><td id="fdResource"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code><span class="tooltiptext">Firefox 60+ builds only</span>
-       </div> [feature detection] version</td><td id="versionNo"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+       <span class="tooltiptext">Firefox 60+ builds only</span></div>
+       &nbsp [feature detection] version</td><td id="versionNo"></td></tr>
     <tr><td>[chrome://] os</td><td id="fdChromeOS"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code>
-      <span class="tooltiptext">Linux, Mac or Windows:<br>use_document_fonts<br>= 0 may break this</span></div> [css] os <sup>1</sup></td>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">Linux, Mac or Windows:<br>use_document_fonts<br>= 0 may break this</span></div> &nbsp [css] os <sup>1</sup></td>
       <td>
         <span id="fdCssOSL" style="font-family: Arimo, DejaVu Serif, Adobe Blank Not Linux;">Linux</span>
         <span id="fdCssOSM" style="font-family: Lucida Grande, Adobe Blank Not Mac;">Mac</span>
@@ -124,8 +131,9 @@
       </td>
     </tr>
     <tr><td>[css line-height] os</td><td id="cssLH"></td></tr>
-    <tr><td><div class="tooltip"><code>[i]</code>
-      <span class="tooltiptext">three font test to<br>detect four OSes:<br> based on <b>[css] os</b></span></div> [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
+    <tr><td><div class="tooltip"><span class="icon">i</span>
+      <span class="tooltiptext">three font test to<br>detect four OSes:<br> based on <b>[css] os</b></span></div>
+      &nbsp [font] os <sup>1</sup></td><td id="fontOS"></td></tr>
     <tr><td>[math] os</td><td id="fdMathOS"></td></tr>
     <tr><td>[scrollbar width] os <sup>2, 3</sup></td><td id="scrollbarWidth"></td></tr>
     <tr><td>[tcp/ip] os</td><td></td></tr>
@@ -295,13 +303,14 @@
 
   <!-- TABLE 8: Canvas - canvas.js -->
   <table id="tb8">
-    <col width="37%"><a name="canvas"></a><col width="63%">
+    <col width="30%"><a name="canvas"></a><col width="70%">
     <thead><tr><th colspan="2">
         <div class="nav-title"><a href="#canvas">Canvas</a>
         <div class="nav-up"><a href="#devices">&#9650;</a></div>
         <div class="nav-down"><a href="#domrect">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td>getContext</td><td class="getContext"></td></tr>
+    <tr><td><button class="btn8" id="canvasRun" onClick="runCanvas(`rerun`)">re-run tests</button>
+      &nbsp getContext</td><td class="getContext"></td></tr>
     <tr><td>toDataURL</td><td class="toDataURL"></td></tr>
     <tr><td>toBlob</td><td class="toBlob"></td></tr>
     <tr><td>mozGetAsFile</td><td class="mozGetAsFile"></td></tr>
@@ -326,10 +335,10 @@
         <div class="nav-down"><a href="#fonts">&#9660;</a></div></div>
     </th></tr></thead>
     <tr><td colspan="3"><button class="btn9" id="drRun">re-run tests</button>
-      &nbsp Element.getClientRects</td><td colspan="4" id="dr1"></td></tr>
-    <tr><td colspan="3">Element.getBoundingClientRect</td><td colspan="4" id="dr2"></td></tr>
-    <tr><td colspan="3">Range.getClientRects</td><td colspan="4" id="dr3"></td></tr>
-    <tr><td colspan="3">Range.getBoundingClientRect</td><td colspan="4" id="dr4"></td></tr>
+      &nbsp Element.getClientRects</td><td colspan="4" class="mono" id="dr1"></td></tr>
+    <tr><td colspan="3">Element.getBoundingClientRect</td><td colspan="4" class="mono" id="dr2"></td></tr>
+    <tr><td colspan="3">Range.getClientRects</td><td colspan="4" class="mono" id="dr3"></td></tr>
+    <tr><td colspan="3">Range.getBoundingClientRect</td><td colspan="4" class="mono" id="dr4"></td></tr>
     <tr><td colspan="7"></td></tr>
     <tr><td colspan="7" class="center"><a target="_blank" class="blue" href="iframes/domrect.html">click here to view what is being rendered</a></td></tr>
     <tr><td colspan="7" class="showhide">
