--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -198,7 +198,8 @@
         <div class="nav-up"><a href="#math">&#9650;</a></div>
         <div class="nav-down"><a href="#headers">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td>[header] http_accept_language</td><td></td></tr>
+    <tr><td><button class="btn4" onClick="runLanguage(`rerun`)">re-run tests</button>
+      &nbsp [header] http_accept_language</td><td></td></tr>
     <tr><td>[navigator] languages</td><td id="nLanguages"></td></tr>
     <tr><td>[navigator] language</td><td id="nLanguage"></td></tr>
     <tr><td>[navigator] languages[0]</td><td id="nLanguages0"></td></tr>
@@ -444,7 +445,7 @@
     <tr><td>getChannelData</td><td id="audioGet"></td></tr>
     <tr><td>copyFromChannel</td><td id="audioCopy"></td></tr>
     <tr><td>sum</td><td id="audioSum"></td></tr>
-    <tr><td colspan="2" class="showhide">
+    <!--<tr><td colspan="2" class="showhide">
         <input id="collapseA" class="toggle" type="checkbox" checked onchange="toggleitems(this, `A`)">
         <label for="collapseA" class="lbl-toggle" id="labelA">&#9660; show details</label>
     </td></tr>
@@ -470,7 +471,7 @@
     <tr class="togA"><td>audio.nt_vc_output.an-channelCount</td><td id="audio.nt_vc_output.an-channelCount"></td></tr>
     <tr class="togA"><td>audio.nt_vc_output.an-channelCountMode</td><td id="audio.nt_vc_output.an-channelCountMode"></td></tr>
     <tr class="togA"><td>audio.nt_vc_output.an-channelInterpretation</td><td id="audio.nt_vc_output.an-channelInterpretation"></td></tr>
-    <tr class="togA"><td colspan="2"></td></tr>
+    <tr class="togA"><td colspan="2"></td></tr>-->
     <tr><td colspan="2"><span class="no_color">audio code courtesy of </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner">kkapsner</a><span class="no_color"> and </span>
       <a target="_blank" class="blue" href="https://github.com/kkapsner/CanvasBlocker">CanvasBlocker</a></td></tr>
