--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -299,7 +299,16 @@
         <div class="nav-up"><a href="#cookies">&#9650;</a></div>
         <div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td>[navigator] hardwareConcurrency</td><td id="nHardwareConcurrency"></td></tr>
+    <tr><td><button class="btn7" id="canvasRun" onClick="runDevices(`rerun`)">re-run tests</button>
+      &nbsp [navigator] hardwareConcurrency</td><td id="nHardwareConcurrency"></td></tr>
+    <tr><td>[api] gamepad</td><td id="nGetGamepads"></td></tr>
+    <tr><td>mediaDevices</td><td id="nMediaDevices"></td></tr>
+    <tr><td>enumerateDevices</td><td id="eMediaDevices"></td></tr>
+    <tr><td>[navigator] maxTouchPoints</td><td id="nMaxTouchPoints"></td></tr>
+    <tr><td>speech synthesis</td><td id="speechSynth"></td></tr>
+    <tr><td>speech engines</td><td id="speechEngines"></td></tr>
+    <tr><td>[api] webvr</td><td id="nGetVR"></td></tr>
+    <tr><td>activeVRDisplays</td><td id="nActiveVR"></td></tr>
   </table>
 
   <!-- TABLE 8: Canvas - canvas.js -->
