--- a/TorZillaPrint.html
+++ b/TorZillaPrint.html
@@ -299,7 +299,7 @@
         <div class="nav-up"><a href="#cookies">&#9650;</a></div>
         <div class="nav-down"><a href="#canvas">&#9660;</a></div></div>
     </th></tr></thead>
-    <tr><td><button class="btn7" id="canvasRun" onClick="runDevices(`rerun`)">re-run tests</button>
+    <tr><td><button class="btn7" onClick="runDevices(`rerun`)">re-run tests</button>
       &nbsp [navigator] hardwareConcurrency</td><td id="nHardwareConcurrency"></td></tr>
     <tr><td>[api] gamepad</td><td id="nGetGamepads"></td></tr>
     <tr><td>mediaDevices</td><td id="nMediaDevices"></td></tr>
